WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235088
[MediaFoundation] Invalidate only the video area using MediaPlayer::repaint(), not the whole FrameView
https://bugs.webkit.org/show_bug.cgi?id=235088
Summary
[MediaFoundation] Invalidate only the video area using MediaPlayer::repaint()...
Fujii Hironori
Reported
2022-01-11 16:06:19 PST
[MediaFoundation] Invalidate only the videa area using MediaPlayer::repaint(), not the whole FrameView MediaPlayerPrivateMediaFoundation::invalidateFrameView() is invalidating the whole FrameView to render the next frame. (
Bug 150941
) It's too much. And, this doesn't work with TiledBacking (
attachment 448832
[details]
).
Attachments
Patch
(3.44 KB, patch)
2022-01-11 16:18 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-01-11 16:18:34 PST
Created
attachment 448888
[details]
Patch
Fujii Hironori
Comment 2
2022-01-12 13:18:05 PST
Comment on
attachment 448888
[details]
Patch Clearing flags on attachment: 448888 Committed
r287948
(?): <
https://commits.webkit.org/r287948
>
Fujii Hironori
Comment 3
2022-01-12 13:18:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2022-01-12 13:19:18 PST
<
rdar://problem/87484080
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug