[MediaFoundation] Invalidate only the videa area using MediaPlayer::repaint(), not the whole FrameView https://bugs.webkit.org/show_bug.cgi?id=235088

Reviewed by Don Olmstead.

r192176 added MediaPlayerPrivateMediaFoundation::invalidateFrameView()
to render the next frame. It was, as per the method name,
invalidating the whole FrameView.

This approach doesn't render video frames with TiledBacking (Bug
233676). Calling MediaPlayer::repaint() is the correct way to
invalidate the video area.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::invalidateVideoArea): Call MediaPlayer::repaint().
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::processInputNotify):
(WebCore::MediaPlayerPrivateMediaFoundation::invalidateFrameView): Deleted.
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:


Canonical link: https://commits.webkit.org/245977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287948 268f45cc-cd09-0410-ab3c-d52691b4dbfc