Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.h
@@ -157,7 +157,7 @@ private:
     void onSessionEnded();
 
     HWND hostWindow();
-    void invalidateFrameView();
+    void invalidateVideoArea();
 
     void addListener(MediaPlayerListener*);
     void removeListener(MediaPlayerListener*);
